--- a/indexFour.html
+++ b/indexFour.html
@@ -102,12 +102,19 @@
         </script>
         <!--    <canvas id="quadro"> -->
                 <script type="module">
-                    import { Game } from './game.js';
+                 /*   import { Game } from './game.js';
                     
                     document.addEventListener("DOMContentLoaded", function(){
                         const game = new Game();
                         window.game = game;
-                    });
+                    });*/
+
+                    import { App } from './app.js';
+        
+		document.addEventListener("DOMContentLoaded", function(){
+			const app = new App();
+			window.app = app;
+		});
                 </script> 
 
         <!--    </canvas>  -->
